# Embroidermodder

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  EM2.sh  MANIFEST.in  Makefile  README.md  build.bat  build.sh  code_style.py  convert_json_to_c.py  dev_notes.md  em2.bash  embroidermodder.py  embroidermodder_layout.json  qa_tests.sh  setup.cfg  setup.py  test.py
.github/workflows/: hugo.yml  pylint.yml  test.yml
assets/: about.scm  boot.scm  config.scm  details-dialog.scm  experimental.scm  menubars.scm  menus.scm  objects.scm  post-boot.scm  settings-dialog.scm  testing.scm  toolbars.scm  ui.scm  unsorted.scm  view-port.scm
docs/: about.html  config.toml  contact.html  documentation.html  downloads.html  header.html  index.html  libembroidery.html
docs/content/: _index.md
docs/content/docs/: about.md  contact.md  downloads.md  manual.md
docs/content/posts/: dec21.md  feb14.md  mar14.md  sep13_01.md  sep13_02.md
embroidermodder/: _3dviews_xpm.py  __init__.py  __main__.py  about_xpm.py  actions.c  actions.py  aligneddimension_xpm.py  config.py  data.py  geometry_objects.py  icons.json  icons.py  layers.py  layout.json  main.c  move_to_libembroidery.c  old_header.h  other.json  settings.py  to_translate.py  translation.py  view.py
embroidermodder/data/: config.json  layout.json  other.json
freeglut3/src/: fg_ext.c  fg_font.c
src/: action_table.c  actions.cpp  config.c  config.json  data.c  edit.c  em2.c  em2.h  embroidermodder.h  gui.c  icons.c  layer.c  main.cpp  make_button.py  non_json_config.c  pan.c  settings.c  settings.cpp  tables.c  tests.py  text.c  tidy_config.py  to_translate.c  triage.py  utilities.c
src/embroidermodder/: __init__.py  color.py  config.json  config.py  details_dialog.py  layers.py  main_window.py  mdi_window.py  parser.py  pattern.py  preview_dialog.py  property_editor.py  select_box.py  settings_dialog.py  statusbar.py  treble_clef.py  utility.py  view.py
src/embroidermodder/config/: design_primatives.py  icons.py
src/icons/: 3dviews.xpm  about.xpm  aligneddimension.xpm  aligntext.xpm  aligntextangle.xpm  aligntextcenter.xpm  aligntexthome.xpm  aligntextleft.xpm  aligntextright.xpm  angulardimension.xpm  app.xpm  arc.xpm  arc3points.xpm  arccenterstartangle.xpm  arccenterstartend.xpm  arccenterstartlength.xpm  arccontinue.xpm  arcstartcenterangle.xpm  arcstartcenterend.xpm  arcstartcenterlength.xpm  arcstartendangle.xpm  arcstartenddirection.xpm  arcstartendradius.xpm  area.xpm  array.xpm  backview.xpm  baselinedimension.xpm  bean.xpm  blank.xpm  bottomview.xpm  boundary.xpm  break2points.xpm  breakatpoint.xpm  browser.xpm  camera.xpm  centermark.xpm  chamfer.xpm  changelog.xpm  check.xpm  circle.xpm  (+325 more)
src/icons/default/: 3dviews.xpm  aligneddimension.xpm  aligntexthome.xpm  aligntextleft.xpm  aligntextright.xpm  angulardimension.xpm  app.xpm  arc.xpm  arc3points.xpm  arccenterstartangle.xpm  arccenterstartend.xpm  arccenterstartlength.xpm  arcstartendangle.xpm  arcstartenddirection.xpm  arcstartendradius.xpm  baselinedimension.xpm  bottomview.xpm  boundary.xpm  browser.xpm  changelog.xpm  check.xpm  circle.xpm  circle2points.xpm  circlecenterradius.xpm  circletantantan.xpm  cloud-2.xpm  colorblue.xpm  colorbyblock.xpm  colorbylayer.xpm  colorwhite.xpm  coloryellow.xpm  copyobject.xpm  customize.xpm  customizemenus.xpm  date.xpm  day.xpm  designdetails.xpm  diameterdimension.xpm  dimensionedit.xpm  dimensiontextedit.xpm  (+161 more)
